# harugram

./: .gitignore  README.md  build.gradle  gradle.properties
TMessagesProj/: build.gradle
TMessagesProj/jni/: gifvideo.cpp  image.cpp
TMessagesProj/jni/tgnet/: ApiScheme.cpp  ApiScheme.h
TMessagesProj_App/: build.gradle
TMessagesProj_AppHockeyApp/: build.gradle  google-services.json
TMessagesProj_AppHuawei/: agconnect-services.json  build.gradle
TMessagesProj_AppStandalone/: build.gradle
TMessagesProj_AppTests/: build.gradle
TMessagesProj_AppTests/tlscheme/: 226.json  227.json  228.json
haru-cli/: Cargo.toml  build-apply.sh  build.rs
haru-cli/src/: config.rs  curator.rs  main.rs  parser.rs  progress.rs
haru-cli/src/actions/: build.rs  compile.rs  config.rs  kotlin_stdlib.rs  lib_prompt.rs  mod.rs  new.rs  package.rs  toolchain.rs
haru-cli/src/actions/maven/: cache.rs  coordinate.rs  error.rs  hash.rs  manifest.rs  metadata.rs  mod.rs  pom.rs  repo.rs  resolve.rs  trust.rs
haru-cli/src/actions/stubs_parser/: file_model.rs  graph.rs  jar_index.rs  lexer.rs  mod.rs  resolver.rs
haru-cli/src/commands/: build.rs  config.rs  mod.rs  new.rs
haru-cli/src/cxx/bithash/: bithash.c  bithash.h
haru-cli/src/tui/: attention.rs  fullscreen.rs  guide.rs  mod.rs  theme.rs
haru-cli/src/tui/sdk_creating/: app.rs  creator.rs  mod.rs  render.rs  state.rs
haru-cli/src/utils/: bithash.rs  findlib.rs  mod.rs
haru-sdk/: .gitignore  haru.yml  maven.yml  metadata.yml
haru-sdk/src/: AndroidTest.kt  Main.kt
haru-sdk/src/Test/: TelegramTest.kt
(+357 files in other folders)
