[package]
name = "haru"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
owo-colors = "4.1"
serde-saphyr = { version = "1.0.0-rc.1", default-features = false, features = ["deserialize"] }
zip = { version = "8.6", default-features = false, features = ["deflate", "aes-crypto", "time"] }
ureq = "3.1"
quick-xml = { version = "0.38", features = ["serialize"] }
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"

[build-dependencies]
cc = "1.1"

[target.'cfg(windows)'.dependencies]
walkdir = "2.5"
